# aiden

./: .env.template  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-project.yaml  lint.yaml  pytest.yaml  unity-activate.yaml
Assets/Project/Materials/: KyleRobotInverted.mat  Mirror.mat  MirrorBathroom.mat  MirrorBedroom.mat
Assets/Project/Prefabs/: AIdenHumanoid.prefab  Player.prefab
Assets/Project/Scenes/: Home.unity  HomeLightingSettings.lighting  HomeScene.unity  Test.unity  TestChatScene.unity  TestScene.unity
Assets/Project/Scenes/Home/: LightingData.asset  Lightmap-0_comp_light.exr  Lightmap-1_comp_light.exr
Assets/Project/Scripts/: AIAudioCapture.cs  AgentMenuToggle.cs  AudioResampler.cs  AuditoryAmbientAPIIntegration.cs  ChatGPTIntegration.cs  CognitiveAPIIntegration.cs  MainMenu.cs  MenuToggle.cs  MicrophoneRecorder.cs  SpeechRecognition.cs  TextToSpeech.cs  VisionAPIIntegration.cs  WavUtility.cs
Assets/Project/Scripts/AI/: CognitiveAPIIntegration.cs  VisionAPIIntegration.cs
Assets/Project/Scripts/Clients/: AuditoryAPIClient.cs  VisionAPIClient.cs
Assets/Project/Scripts/Core/: BrainController.cs
Assets/Project/Scripts/Player/: PerspectiveSwitcher.cs  ThirdPersonController.cs
Assets/Project/Scripts/UI/: AgentMenu.cs  AgentMenuToggle.cs  AuditoryAmbientAPIUIController.cs  (+6 more)
Assets/Project/Textures/: Mirror.renderTexture  MirrorBathroom.renderTexture  MirrorBedroom.renderTexture  VisionRenderTexture.renderTexture
ProjectSettings/: BurstAotSettings_WSAPlayer.json  BurstAotSettings_WebGL.json  CommonBurstAotSettings.json  EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  SceneTemplateSettings.json  TagManager.asset
aiden/api/: brain.py  mms.py  whisper.py
aiden/app/: brain.py  redis_client.py  scene.py  utils.py
aiden/app/brain/: auditory.py  cognition.py  cortical.py  occipital.py
aiden/app/clients/: chroma_client.py  redis_client.py
aiden/common/: models.py
aiden/models/: brain.py  chat.py  scene.py
aiden/sim/: scene.py
compose/auditory/: Dockerfile  pyproject.toml
compose/cognitive/: entrypoint.sh
compose/vision/: entrypoint.sh
compose/vocal/: Dockerfile  pyproject.toml
config/brain/: default.json
config/scenes/: default.json
data/sensory/olfactory/: dravnieks_odor_descriptors.txt
scripts/: autonomous_agent.py  brain_check.py  brain_cli.py
scripts/evaluate/: api_auditory.py  api_cortical.py  api_occipital.py  app_broca.py  app_cortical.py  app_prefrontal.py  app_thalamus.py
tests/: conftest.py
tests/api/: test_brain.py
tests/app/: test_brain.py  test_scene.py
tests/app/brain/: test_cognition.py  test_cortical.py
tests/e2e/app/: test_cortical_e2e.py
tests/integration/app/: test_cortical_integration.py
tests/unit/api/: test_brain.py
tests/unit/app/: test_scene.py  test_utils.py
(+29 files in other folders)
