[tool.poetry]
name = "aiden"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
httpx = "^0.27.2"
uvicorn = "^0.32.0"
requests = "^2.32.3"
pydantic = "^2.9.2"
redis = "^5.2.0"
# chromadb won't install on at least mac, only needed for docker anyway
chromadb = [{platform = "linux", version = "^0.5.15"}]
langchain-community = "^0.3.5"
langchain-core = "^0.3.15"
langchain-ollama = "^0.2.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
testcontainers = "^4.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
