[tool.poetry]
name = "aiden"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.11.11"
# chromadb won't install on at least mac, only needed for docker anyway
chromadb = [{platform = "linux", version = "^0.5.23"}]
fastapi = "^0.115.6"
httpx = "^0.27.2"
langchain-core = "^0.3.28"
langchain-ollama = "^0.2.2"
langgraph = "^0.2.60"
pillow = "^11.0.0"
pydantic = "^2.10.4"
redis = "^5.2.1"
requests = "^2.32.4"
uvicorn = "^0.34.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
pytest-mock = "^3.14.0"
testcontainers = "^4.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "COGNITIVE_MODEL=llama3.2:1b",
    "TESTCONTAINERS_OLLAMA_IMAGE=ollama/ollama:0.4.7",
]
