[tool.poetry]
name = "aiden-vocal"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
transformers = "^4.39.2"
accelerate = "^0.28.0"
scipy = "^1.12.0"
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
